--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -83,10 +83,6 @@
     }
   }
 
-  .wtis-story-headline-stack__personality {
-    font-size: $text-4xl;
-  }
-
   .wtis-footer-grid {
     grid-template-columns: 1fr;
     gap: $space-8;
